; ModuleID = '/home/carl/AnghaBench/git/extr_unpack-trees.c_do_compare_entry_piecewise.c'
source_filename = "/home/carl/AnghaBench/git/extr_unpack-trees.c_do_compare_entry_piecewise.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i8* }
%struct.traverse_info = type { i8*, i64, i32, i32, %struct.traverse_info* }

@S_IFREG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache_entry*, %struct.traverse_info*, i8*, i64, i32)* @do_compare_entry_piecewise to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_compare_entry_piecewise(%struct.cache_entry* %0, %struct.traverse_info* %1, i8* %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.cache_entry*, align 8
  %8 = alloca %struct.traverse_info*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  store %struct.cache_entry* %0, %struct.cache_entry** %7, align 8
  store %struct.traverse_info* %1, %struct.traverse_info** %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32 %4, i32* %11, align 4
  %16 = load %struct.traverse_info*, %struct.traverse_info** %8, align 8
  %17 = getelementptr inbounds %struct.traverse_info, %struct.traverse_info* %16, i32 0, i32 4
  %18 = load %struct.traverse_info*, %struct.traverse_info** %17, align 8
  %19 = icmp ne %struct.traverse_info* %18, null
  br i1 %19, label %20, label %40

20:                                               ; preds = %5
  %21 = load %struct.cache_entry*, %struct.cache_entry** %7, align 8
  %22 = load %struct.traverse_info*, %struct.traverse_info** %8, align 8
  %23 = getelementptr inbounds %struct.traverse_info, %struct.traverse_info* %22, i32 0, i32 4
  %24 = load %struct.traverse_info*, %struct.traverse_info** %23, align 8
  %25 = load %struct.traverse_info*, %struct.traverse_info** %8, align 8
  %26 = getelementptr inbounds %struct.traverse_info, %struct.traverse_info* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  %28 = load %struct.traverse_info*, %struct.traverse_info** %8, align 8
  %29 = getelementptr inbounds %struct.traverse_info, %struct.traverse_info* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = load %struct.traverse_info*, %struct.traverse_info** %8, align 8
  %32 = getelementptr inbounds %struct.traverse_info, %struct.traverse_info* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 8
  %34 = call i32 @do_compare_entry_piecewise(%struct.cache_entry* %21, %struct.traverse_info* %24, i8* %27, i64 %30, i32 %33)
  store i32 %34, i32* %15, align 4
  %35 = load i32, i32* %15, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %20
  %38 = load i32, i32* %15, align 4
  store i32 %38, i32* %6, align 4
  br label %67

39:                                               ; preds = %20
  br label %40

40:                                               ; preds = %39, %5
  %41 = load %struct.traverse_info*, %struct.traverse_info** %8, align 8
  %42 = getelementptr inbounds %struct.traverse_info, %struct.traverse_info* %41, i32 0, i32 3
  %43 = load i32, i32* %42, align 4
  store i32 %43, i32* %12, align 4
  %44 = load %struct.cache_entry*, %struct.cache_entry** %7, align 8
  %45 = call i32 @ce_namelen(%struct.cache_entry* %44)
  store i32 %45, i32* %13, align 4
  %46 = load i32, i32* %13, align 4
  %47 = load i32, i32* %12, align 4
  %48 = icmp slt i32 %46, %47
  br i1 %48, label %49, label %50

49:                                               ; preds = %40
  store i32 -1, i32* %6, align 4
  br label %67

50:                                               ; preds = %40
  %51 = load i32, i32* %12, align 4
  %52 = load i32, i32* %13, align 4
  %53 = sub nsw i32 %52, %51
  store i32 %53, i32* %13, align 4
  %54 = load %struct.cache_entry*, %struct.cache_entry** %7, align 8
  %55 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %54, i32 0, i32 0
  %56 = load i8*, i8** %55, align 8
  %57 = load i32, i32* %12, align 4
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds i8, i8* %56, i64 %58
  store i8* %59, i8** %14, align 8
  %60 = load i8*, i8** %14, align 8
  %61 = load i32, i32* %13, align 4
  %62 = load i32, i32* @S_IFREG, align 4
  %63 = load i8*, i8** %9, align 8
  %64 = load i64, i64* %10, align 8
  %65 = load i32, i32* %11, align 4
  %66 = call i32 @df_name_compare(i8* %60, i32 %61, i32 %62, i8* %63, i64 %64, i32 %65)
  store i32 %66, i32* %6, align 4
  br label %67

67:                                               ; preds = %50, %49, %37
  %68 = load i32, i32* %6, align 4
  ret i32 %68
}

declare dso_local i32 @ce_namelen(%struct.cache_entry*) #1

declare dso_local i32 @df_name_compare(i8*, i32, i32, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
